<resources>
  <string name="app_name">RollWithMe for Sphero</string>
  <string name="setup_label">Let\'s Go</string>
  <string name="next_label">Next</string>
  <string name="yes_label">Yes!</string>
  <string name="later_label">Later</string>
  <string name="walkthrough_connect_label">Connect</string>
  <string name="about_title">About RollWithMe</string>
  <string name="error_title">RollWithMe Error</string>
  <string name="prefs_title">RollWithMe Preferences</string>
  <string name="walkthrough_title">RollWithMe: Getting Started</string>
  <string name="about_text">
Now you can take your Sphero for a walk!
  </string>
  <string name="about_version">RollWithMe for Sphero (v1.10)</string>
  <string name="about_copyright">&#169; 2016 Lingering Socket Labs</string>
  <string name="about_author_email">info@goseumdochi.org</string>
  <string name="about_project_url">https://goseumdochi.org</string>
  <string name="help_url">https://goseumdochi.org/roll-with-me-help#tips</string>
  <string name="bugs_url">https://goseumdochi.org/report-a-bug#details</string>
  <string name="control_status_text">Status:</string>

  <string name="pref_category_speed">Sphero Roll Speed</string>
  <string name="pref_title_walk_speed">Walking</string>
  <string name="pref_default_walk_speed">25</string>
  <string name="pref_title_run_speed">Running</string>
  <string name="pref_default_run_speed">100</string>
  <string name="pref_category_walkthrough">Walkthrough</string>
  <string name="pref_title_walkthrough">Skip</string>
  <string name="pref_category_analytics">Analytics</string>
  <string name="pref_title_analytics">Opt Out</string>

  <string name="feedback_title">Got Feedback on RollWithMe?</string>
  <string name="feedback_message">Please leave us a review (or feedback comments if you are trying the beta) via the Play Store.</string>

  <string name="intro_pre_text">Make sure your Sphero is paired and awake, then press this button to get started!</string>
  <string name="intro_expert_text">Use the app menu to adjust preferences or see the walkthrough again.</string>
  <string name="intro_post_text"><a href="https://goseumdochi.org/roll-with-me-help#tips">Get help or learn some tips and tricks online</a></string>

  <string name="walkthrough_hint">(Swipe left to continue)</string>

  <string name="unfound_text">
Sphero could not be located.  Please <a href="https://goseumdochi.org/roll-with-me-help#tips">read the help page</a> and then try again.  You can also <a href="https://youtu.be/7waOVA_C6QQ">watch a video example</a>.
  </string>
  <string name="nosensor_text">
Unfortunately, your device does not support one or more required sensors
(rotation vector and/or accelerometer).
  </string>

  <string name="intro_animation_delay">200</string>
  <string name="connect_animation_delay">200</string>

  <string-array name="walkthrough_text">
    <item>Let\'s learn how to get RollWithMe working in a few simple steps.</item>
    <item>You\'ll start by putting Sphero on the ground near you.</item>
    <item>Next, you\'ll be asked to hold your phone over Sphero, like this.</item>
    <item>Then, you\'ll use the camera view to center Sphero in the crosshairs.</item>
    <item>Next, you\'ll touch the screen in the center of the crosshairs, causing Sphero to roll away from the center.</item>
    <item>Hold your phone motionless during this step so that RollWithMe can measure Sphero\'s movement correctly.</item>
    <item>Once Sphero stops moving and your screen turns magenta, Sphero will be ready to roll with you.  Now, enough talk, let\'s do it!</item>
  </string-array>

</resources>
