<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
      android:title="@string/pref_category_speed">
    <SeekBarPreference
        android:key="pref_key_walk_speed"
        android:title="@string/pref_title_walk_speed"
        android:max="100"
        android:defaultValue="@string/pref_default_walk_speed" />
    <SeekBarPreference
        android:key="pref_key_run_speed"
        android:title="@string/pref_title_run_speed"
        android:max="100"
        android:defaultValue="@string/pref_default_run_speed" />
  </PreferenceCategory>
  <PreferenceCategory
      android:title="@string/pref_category_walkthrough">
    <CheckBoxPreference
        android:title="@string/pref_title_walkthrough"
        android:defaultValue="false"
        android:key="pref_key_walkthrough" />
  </PreferenceCategory>
  <PreferenceCategory
        android:key="pref_key_analytics"
        android:title="@string/pref_category_analytics">
    <CheckBoxPreference
        android:title="@string/pref_title_analytics"
        android:defaultValue="false"
        android:key="pref_key_analytics_opt_out" />
    <EditTextPreference
        android:title="Feedback"
        android:defaultValue="unripe"
        android:key="pref_key_feedback" />
  </PreferenceCategory>
</PreferenceScreen>
